[gd_scene load_steps=53 format=2]

[ext_resource path="res://sprites/act4setting/scene 1/snowfall2.png" type="Texture" id=1]
[ext_resource path="res://sprites/Act1settings/sceneone/middle tree.png" type="Texture" id=2]
[ext_resource path="res://sprites/act4setting/scene 1/cloudbg.png" type="Texture" id=3]
[ext_resource path="res://sprites/act4setting/scene 1/snowpath.png" type="Texture" id=4]
[ext_resource path="res://sprites/Act1settings/sceneone/back tree.png" type="Texture" id=5]
[ext_resource path="res://sprites/Act1settings/sceneone/front tree.png" type="Texture" id=6]
[ext_resource path="res://sprites/act4setting/scene 1/snowfall1.png" type="Texture" id=7]
[ext_resource path="res://sprites/act4setting/scene 1/snow.png" type="Texture" id=8]
[ext_resource path="res://sprites/act4setting/scene 1/snowfall1 copy.png" type="Texture" id=9]
[ext_resource path="res://sprites/Act1settings/scenefive/pillar.png" type="Texture" id=10]
[ext_resource path="res://sprites/act4setting/scene 1/snowfall2 copy.png" type="Texture" id=11]
[ext_resource path="res://movingwood.tscn" type="PackedScene" id=12]
[ext_resource path="res://sprites/act4setting/scene 1/snowblock.png" type="Texture" id=13]
[ext_resource path="res://sprites/characters/right walk 2.png" type="Texture" id=14]
[ext_resource path="res://sprites/characters/jump 1.png" type="Texture" id=15]
[ext_resource path="res://sprites/characters/right walk 8.png" type="Texture" id=16]
[ext_resource path="res://sprites/characters/right walk 3.png" type="Texture" id=17]
[ext_resource path="res://player.gd" type="Script" id=18]
[ext_resource path="res://sprites/characters/right walk 7.png" type="Texture" id=19]
[ext_resource path="res://sprites/characters/right walk 5.png" type="Texture" id=20]
[ext_resource path="res://sprites/characters/idle right 1.png" type="Texture" id=21]
[ext_resource path="res://sprites/characters/idle right 2.png" type="Texture" id=22]
[ext_resource path="res://sprites/characters/right walk 6.png" type="Texture" id=23]
[ext_resource path="res://sprites/characters/fall.png" type="Texture" id=24]
[ext_resource path="res://sprites/characters/right walk 4.png" type="Texture" id=25]
[ext_resource path="res://act4/scene1/AnimatedSprite.gd" type="Script" id=26]
[ext_resource path="res://sprites/act4setting/scene 1/brokensnowman2.png" type="Texture" id=27]
[ext_resource path="res://sprites/act4setting/scene 1/brokensnowman1.png" type="Texture" id=28]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=29]
[ext_resource path="res://act4/scene1/enemy.tscn" type="PackedScene" id=30]
[ext_resource path="res://act4/scene1/snowman.gd" type="Script" id=31]
[ext_resource path="res://act4/scene1/Path2D.gd" type="Script" id=32]
[ext_resource path="res://sprites/act 2 setting/scene 3/gun.png" type="Texture" id=33]
[ext_resource path="res://act4/scene1/gun.gd" type="Script" id=34]
[ext_resource path="res://act4/scene1/snowball.tscn" type="PackedScene" id=35]
[ext_resource path="res://act4/scene1/gun2.gd" type="Script" id=36]
[ext_resource path="res://act4/scene1/gun3.gd" type="Script" id=37]
[ext_resource path="res://sounds/Walking-sound-snow.wav" type="AudioStream" id=38]
[ext_resource path="res://act4/scene1/act4scene1.gd" type="Script" id=39]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -605.449, 67.1238, 0, 0, 0, 0, 903.985, 37.4409, 0, 0, 0, 0, 3324.49, 59.7032, 0, 0, 0, 0, 5812.84, -7.82507, 0, 0, 0, 0, 9119.83, 3.30603, 0, 0, 0, 0, 11574.3, 23.342 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 132.569, 1764.78 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14088.4, 613.046 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 464.218, 69.1782 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 147.117, 808.21 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1199.61, 114.416 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 25 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 19 ), ExtResource( 16 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 76.6737
height = 343.694

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 125.827, 350.761 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 136.717, 48.0395 )

[sub_resource type="DynamicFont" id=13]
size = 100
font_data = ExtResource( 29 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 39 )

[node name="background" type="ParallaxBackground" parent="."]
layer = -103

[node name="ParallaxLayer" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="background/ParallaxLayer"]
position = Vector2( 1920.26, 1075.81 )
texture = ExtResource( 3 )

[node name="snow" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="snow"]
motion_mirroring = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="snow/ParallaxLayer"]
position = Vector2( 1916.79, 1169.2 )
texture = ExtResource( 8 )

[node name="snow2" type="ParallaxBackground" parent="."]
layer = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="snow2"]
z_index = 3
motion_mirroring = Vector2( 3840, 0 )

[node name="Sprite" type="Sprite" parent="snow2/ParallaxLayer"]
position = Vector2( 1920.26, 1577.2 )
z_index = 2
texture = ExtResource( 8 )

[node name="backtree" type="ParallaxBackground" parent="."]
layer = -102

[node name="ParallaxLayer" type="ParallaxLayer" parent="backtree"]
z_index = 3
motion_mirroring = Vector2( 7680, 0 )

[node name="Sprite" type="Sprite" parent="backtree/ParallaxLayer"]
position = Vector2( 3738.14, 958.51 )
z_index = 2
texture = ExtResource( 5 )

[node name="midtree" type="ParallaxBackground" parent="."]
layer = -102
scroll_limit_end = Vector2( 3840, 0 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="midtree"]
visible = false
z_index = 3
motion_mirroring = Vector2( 7680, 0 )

[node name="Sprite" type="Sprite" parent="midtree/ParallaxLayer"]
position = Vector2( 3798.56, 964.552 )
z_index = 2
texture = ExtResource( 2 )

[node name="fronttree" type="ParallaxBackground" parent="."]
layer = 5

[node name="ParallaxLayer" type="ParallaxLayer" parent="fronttree"]
visible = false
z_index = 3
motion_mirroring = Vector2( 7680, 0 )

[node name="Sprite" type="Sprite" parent="fronttree/ParallaxLayer"]
position = Vector2( 3031.43, 1050.85 )
scale = Vector2( 1, 1.17522 )
z_index = 2
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1937.44, 1134.62 )
z_index = 2
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 5734.31, 1092.12 )
z_index = 2
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 9539.6, 1100.57 )
z_index = 2
texture = ExtResource( 4 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 13203.2, 1118.24 )
z_index = 2
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 16964.3, 1113.94 )
z_index = 2
texture = ExtResource( 4 )

[node name="Sprite6" type="Sprite" parent="."]
position = Vector2( 20736, 1112.7 )
z_index = 2
texture = ExtResource( 4 )

[node name="Sprite7" type="Sprite" parent="."]
position = Vector2( 24395.9, 1112.7 )
z_index = 2
texture = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1980.23, 1098.98 )
z_index = 100
frames = SubResource( 1 )
frame = 2
speed_scale = 0.5
script = ExtResource( 26 )

[node name="block" type="Sprite" parent="."]
position = Vector2( 2544.53, 1366.81 )
scale = Vector2( 2.18376, 1.34319 )
texture = ExtResource( 13 )

[node name="block2" type="Sprite" parent="."]
position = Vector2( 3563.99, 988.444 )
scale = Vector2( 2.18376, 1.34319 )
texture = ExtResource( 13 )

[node name="block5" type="Sprite" parent="."]
position = Vector2( 15623.4, 1409.68 )
scale = Vector2( 2.18376, 1.34319 )
texture = ExtResource( 13 )

[node name="block6" type="Sprite" parent="."]
position = Vector2( 16880, 931.629 )
scale = Vector2( 2.18376, 1.34319 )
texture = ExtResource( 13 )

[node name="block7" type="Sprite" parent="."]
position = Vector2( 18080.7, 1259.56 )
scale = Vector2( 2.18376, 1.34319 )
texture = ExtResource( 13 )

[node name="block8" type="Sprite" parent="."]
position = Vector2( 19518.9, 1547.19 )
scale = Vector2( 2.18376, 1.34319 )
texture = ExtResource( 13 )

[node name="block9" type="Sprite" parent="."]
position = Vector2( 20945.4, 1427.29 )
scale = Vector2( 2.18376, 1.34319 )
texture = ExtResource( 13 )

[node name="block3" type="Sprite" parent="."]
position = Vector2( 7417.13, 659.914 )
scale = Vector2( 2.18376, 1.34319 )
texture = ExtResource( 13 )

[node name="block4" type="Sprite" parent="."]
position = Vector2( 11922.8, 764.927 )
scale = Vector2( 5.31335, 2.13885 )
texture = ExtResource( 13 )

[node name="wall" type="Sprite" parent="."]
position = Vector2( 4296.73, 1402.54 )
scale = Vector2( 0.368701, 0.808801 )
z_index = 4
texture = ExtResource( 10 )

[node name="wall2" type="Sprite" parent="."]
position = Vector2( 14375.8, 1509.53 )
scale = Vector2( 0.368701, 0.808801 )
z_index = 4
texture = ExtResource( 10 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 5092.89, 1115.24 )
scale = Vector2( 0.75464, 1 )
curve = SubResource( 2 )
script = ExtResource( 32 )
__meta__ = {
"_edit_group_": true
}

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -587.983, 66.7803 )
offset = 17.4738
rotate = false

[node name="KinematicBody2D" parent="Path2D/PathFollow2D" instance=ExtResource( 12 )]

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 5380.25, 1316.39 )
scale = Vector2( 0.75464, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 18.8318, 1092.25 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 24884.9, 1478.88 )
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 13897.9, 2503.38 )
shape = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2590.82, 1470.69 )
shape = SubResource( 5 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2590.82, 1470.69 )
shape = SubResource( 5 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3585.35, 1097.02 )
shape = SubResource( 5 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 7416.88, 729.307 )
shape = SubResource( 5 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 15621.9, 1514.39 )
shape = SubResource( 5 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 16859.2, 1047.7 )
shape = SubResource( 5 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 18096.4, 1314.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 19492.3, 1610.98 )
shape = SubResource( 5 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 20934.2, 1478.71 )
shape = SubResource( 5 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 4289.35, 1506.03 )
z_index = 6
shape = SubResource( 6 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 14411.2, 1524.91 )
z_index = 6
shape = SubResource( 6 )

[node name="CollisionShape2D15" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 11958.6, 870.296 )
shape = SubResource( 7 )

[node name="gun" type="KinematicBody2D" parent="."]
position = Vector2( 15602.2, 265.941 )
rotation = 1.74533
script = ExtResource( 34 )
detect_radius = 1000
Bullet = ExtResource( 35 )

[node name="Sprite" type="Sprite" parent="gun"]
position = Vector2( 10.8594, 104.528 )
rotation = 0.406662
scale = Vector2( 0.710964, 0.636029 )
texture = ExtResource( 33 )

[node name="Timer" type="Timer" parent="gun"]

[node name="visibility" type="Area2D" parent="gun"]
position = Vector2( 182.176, 355.962 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="gun/visibility"]

[node name="gun3" type="KinematicBody2D" parent="."]
position = Vector2( 17859.6, 278.069 )
script = ExtResource( 37 )
detect_radius = 1000
Bullet = ExtResource( 35 )

[node name="Sprite" type="Sprite" parent="gun3"]
position = Vector2( 10.8594, 104.528 )
scale = Vector2( 0.710964, 0.636029 )
texture = ExtResource( 33 )

[node name="Timer" type="Timer" parent="gun3"]

[node name="visibility" type="Area2D" parent="gun3"]
position = Vector2( -543.883, 58.7981 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="gun3/visibility"]

[node name="gun4" type="KinematicBody2D" parent="."]
position = Vector2( 19575.3, 296.618 )
script = ExtResource( 37 )
detect_radius = 1000
Bullet = ExtResource( 35 )

[node name="Sprite" type="Sprite" parent="gun4"]
position = Vector2( 10.8594, 104.528 )
scale = Vector2( 0.710964, 0.636029 )
texture = ExtResource( 33 )

[node name="Timer" type="Timer" parent="gun4"]

[node name="visibility" type="Area2D" parent="gun4"]
position = Vector2( -654.129, 316.04 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="gun4/visibility"]

[node name="gun6" type="KinematicBody2D" parent="."]
position = Vector2( 22852.3, 593.871 )
script = ExtResource( 37 )
detect_radius = 1000
Bullet = ExtResource( 35 )

[node name="Sprite" type="Sprite" parent="gun6"]
position = Vector2( 10.8594, 104.528 )
scale = Vector2( 0.710964, 0.636029 )
texture = ExtResource( 33 )

[node name="Timer" type="Timer" parent="gun6"]

[node name="visibility" type="Area2D" parent="gun6"]
position = Vector2( -470.385, 146.995 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="gun6/visibility"]

[node name="gun2" type="KinematicBody2D" parent="."]
position = Vector2( 17193.6, 1604.48 )
z_index = 2
script = ExtResource( 36 )
detect_radius = 1000
Bullet = ExtResource( 35 )

[node name="Sprite" type="Sprite" parent="gun2"]
position = Vector2( 10.8594, 104.528 )
scale = Vector2( 0.710964, 0.636029 )
texture = ExtResource( 33 )

[node name="Timer" type="Timer" parent="gun2"]

[node name="visibility" type="Area2D" parent="gun2"]
position = Vector2( -543.883, -7.34961 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="gun2/visibility"]

[node name="gun5" type="KinematicBody2D" parent="."]
position = Vector2( 21676.2, 1800.67 )
z_index = 2
script = ExtResource( 36 )
detect_radius = 1000
Bullet = ExtResource( 35 )

[node name="Sprite" type="Sprite" parent="gun5"]
position = Vector2( 10.8594, 104.528 )
scale = Vector2( 0.710964, 0.636029 )
texture = ExtResource( 33 )

[node name="Timer" type="Timer" parent="gun5"]

[node name="visibility" type="Area2D" parent="gun5"]
position = Vector2( -529.184, 14.6996 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="gun5/visibility"]

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 21.3153, -87.886 )
script = ExtResource( 18 )

[node name="playerSprite" type="AnimatedSprite" parent="player"]
position = Vector2( 779.075, 1818.1 )
scale = Vector2( 0.593468, 0.61813 )
z_index = 10
frames = SubResource( 8 )
animation = "fall"
speed_scale = 1.3

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 764.356, 1833.99 )
z_index = 10
shape = SubResource( 9 )

[node name="Walk" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 38 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 1985.87, 1910.7 )
current = true
limit_left = 0
limit_top = 0
limit_bottom = 2160

[node name="KinematicBody2D3" parent="." instance=ExtResource( 30 )]
position = Vector2( 1375.55, 1899.37 )
z_index = 10

[node name="KinematicBody2D20" parent="." instance=ExtResource( 30 )]
position = Vector2( 7101.05, 530.207 )
z_index = 10

[node name="KinematicBody2D21" parent="." instance=ExtResource( 30 )]
position = Vector2( 4604.53, 1792.33 )
z_index = 10

[node name="KinematicBody2D22" parent="." instance=ExtResource( 30 )]
position = Vector2( 10946.5, 625.081 )
z_index = 10

[node name="KinematicBody2D23" parent="." instance=ExtResource( 30 )]
position = Vector2( 12870.6, 634.048 )
z_index = 10

[node name="KinematicBody2D2" parent="." instance=ExtResource( 30 )]
position = Vector2( 3263.27, 893.085 )

[node name="KinematicBody2D4" parent="." instance=ExtResource( 30 )]
position = Vector2( 2859.81, 1241.67 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D2"]
position = Vector2( 12039.9, 424.959 )
scale = Vector2( 0.324402, 0.344041 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 12029.7, 432.59 )
shape = SubResource( 10 )

[node name="snowman" type="Area2D" parent="."]
position = Vector2( 24245.8, 1790.43 )
script = ExtResource( 31 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="snowman"]
z_index = 10
frames = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="snowman"]
position = Vector2( -20.7468, 54.0382 )
shape = SubResource( 12 )

[node name="Label" type="Label" parent="snowman"]
margin_left = -215.653
margin_top = -267.248
margin_right = 236.347
margin_bottom = -167.248
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "remember"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="gun/Timer" to="gun" method="_on_Timer_timeout"]
[connection signal="body_entered" from="gun/visibility" to="gun" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="gun/visibility" to="gun" method="_on_Area2D_body_exited"]
[connection signal="timeout" from="gun3/Timer" to="gun3" method="_on_Timer_timeout"]
[connection signal="body_entered" from="gun3/visibility" to="gun3" method="_on_visibility_body_entered"]
[connection signal="body_exited" from="gun3/visibility" to="gun3" method="_on_visibility_body_exited"]
[connection signal="timeout" from="gun4/Timer" to="gun4" method="_on_Timer_timeout"]
[connection signal="body_entered" from="gun4/visibility" to="gun4" method="_on_visibility_body_entered"]
[connection signal="body_exited" from="gun4/visibility" to="gun4" method="_on_visibility_body_exited"]
[connection signal="timeout" from="gun6/Timer" to="gun6" method="_on_Timer_timeout"]
[connection signal="body_entered" from="gun6/visibility" to="gun6" method="_on_visibility_body_entered"]
[connection signal="body_exited" from="gun6/visibility" to="gun6" method="_on_visibility_body_exited"]
[connection signal="timeout" from="gun2/Timer" to="gun2" method="_on_Timer_timeout"]
[connection signal="body_entered" from="gun2/visibility" to="gun2" method="_on_visibility_body_entered"]
[connection signal="body_exited" from="gun2/visibility" to="gun2" method="_on_visibility_body_exited"]
[connection signal="timeout" from="gun5/Timer" to="gun5" method="_on_Timer_timeout"]
[connection signal="body_entered" from="gun5/visibility" to="gun5" method="_on_visibility_body_entered"]
[connection signal="body_exited" from="gun5/visibility" to="gun5" method="_on_visibility_body_exited"]
[connection signal="body_entered" from="snowman" to="snowman" method="_on_snowman_body_entered"]
[connection signal="body_exited" from="snowman" to="snowman" method="_on_snowman_body_exited"]
